@@ -1,6 +1,6 @@
 #don't translate following Application.*, exclude .title and .description
 Application.id = FRD
-Application.version = 0.85alpha3
+Application.version = 0.85alpha4
 Application.title = FreeRapid Downloader ${Application.version} by Vity&team
 Application.vendor = Vity
 Application.vendorId = VitySoft
@@ -51,6 +51,8 @@ iconFileTypeBig_PDF=${iconsPath}pdf-big.gif
 downloadingIconImage=${iconsPath}downloading.gif
 trayIconImage=${iconsPath}download.gif
 trayIconImageWin=${iconsPath}small.png
+
+searchDefaultIcon=${iconsPath}search.png
 
 #sounds - no translation!
 doneWav=done.wav
@@ -266,7 +268,12 @@ options.Action.shortDescription = Show User Options
 
 manageSearchEngines.Action.text=&Manage search engines...
 manageSearchEngines.Action.shortDescription=Open search engine selection page in web browser
-howToManageSearchEngines=To add a new search engine, browse this site and make your choice.\nRight-click the download link and choose "Save linked content as" (or something similar),\nand save the file into the "search" folder inside FRD's root folder. 
+howToManageSearchEngines=To add a new search engine, browse site that will be opened and make your choice.\nRight-click the download link and choose "Save linked content as" (or something similar),\nand save the file into the "search" folder inside FRD's root folder. 
+
+sortbyNameAction.Action.text=Sort by &Name
+sortbyNameAction.Action.shortDescription=Sort selected downloads by file name
+sortbyNameAction.Action.accelerator=shortcut S
+sortbyNameAction.Action.smallIcon=${iconsPath}sort_small.gif
 
 labelWorkingProgress.toolTipText=Working indicator
 
